first morteza requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "clickhouse-driver>=0.2.9",
-    "mysql>=0.0.3",
-    "mysql-connector-python>=9.5.0",
-    "psycopg2>=2.9.11",
-    "python-dotenv>=1.2.1",
+    "dotenv>=0.9.9",
+    "pandas>=2.3.3",
 ]
